--- a/trunk/Madre.com/css/style.css
+++ b/trunk/Madre.com/css/style.css
@@ -1,4 +1,3 @@
-/* Design by http://www.dreamtemplate.com */
 @charset "utf-8";
 body {
 	margin:0;
@@ -63,6 +62,7 @@ h4{
 	margin:auto auto;
 	height:30px;
 	width:100%;
+	font-family:Verdana, Geneva, sans-serif;;
 	
 }
 
@@ -79,6 +79,7 @@ h4{
 	color:#555;
 	text-decoration:none;
 	font-size:10px;
+	font-family:"Trebuchet MS", Helvetica, sans-serif;
 	
 }
 #topbar-menu a:hover{
@@ -91,8 +92,9 @@ h4{
 	color:#17365d;
 	width:100%;
 	font-weight:bold;
-	background-color:#b0b3ba;
+	background-color:#F5F5DC;
 	padding : 5px;
+	font-family:"Trebuchet MS", Helvetica, sans-serif
 }
 #inside-menu a {
 	color:#17365d;
@@ -133,6 +135,7 @@ h4{
 	width:200px;
 	height:900px;
 	background-color:#002060;
+	
 }
 #flag{
 	float:left;	
@@ -144,14 +147,15 @@ h4{
 
 .footer {
 	margin:auto auto;
-	background:#b0b3ba;
+	background:#FAEBD7;
 	width:960px;
 	height:30px;
+	font-family:"Trebuchet MS", Helvetica, sans-serif;
 }
 
 #footer-text {
 	padding:5px 0px 0px 5px ;
-	color:white;
+	color:#17365d;
 }
 
 .resp_list {list-style:none;}
@@ -159,7 +163,8 @@ h4{
 .resp_list a {
 	color:#00b1f1;
 	text-decoration:none;
-	font-size:10pt;
+	font-size:12pt;
+	align:justify;
 	
 }
 .resp_list a:hover{
@@ -167,6 +172,6 @@ h4{
 }
 
 div.tabs       { width: 100%;padding:10px; }
-div.tabs div   { width: 230px; height: 230px; float: left; }
+div.tabs div   { width: 230px; height: 230px; float:left; }
 div.tabs .tabcontent   { padding:0px 5px 0px 5px; }
 div.tabs .tabheader{height: 30px; background-color:#0b75bf;padding-left:5px;padding-top:5px; color:#fff; font-size:11pt;font-weight:bold;font-family:Arial, Helvetica, Verdana, sans-serif}
