--- a/Madre.com/css/style.css
+++ b/Madre.com/css/style.css
@@ -147,7 +147,7 @@ h4{
 
 .footer {
 	margin:auto auto;
-	background:#FAEBD7;
+	background:#F5F5DC;
 	width:960px;
 	height:30px;
 	font-family:"Trebuchet MS", Helvetica, sans-serif;
